@@ -14,6 +14,7 @@ x.x:
 - changed: subsite admin listing now has pagination
 - changed: non-members of subsites are not forced to join, but can view public content
 - changed: Google Analytics now uses IP adres anonimization
+- changed: login form to support PageFreezer
 
 2.4 (2014-02-19):
 
